--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link" id="bg-ekle" href="#"><i class="fas fa-stroopwafel"></i></a>
-            <a class="nav-item nav-link" href="#"><i class="fab fa-tumblr-square"></i></a>
+            <a class="nav-item nav-link" id="textarea-ekle" href="#"><i class="fab fa-tumblr-square"></i></a>
             <a class="nav-item nav-link" href="#"><i class="fas fa-image"></i></a>
             <a class="nav-item nav-link" href="#"><i class="fas fa-eye"></i></a>
           </div>
@@ -73,8 +73,7 @@
                 </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button> 
           </div>
         </div>
       </div>
