--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" id="bg-ekle" href="#"><i class="fas fa-stroopwafel"></i></a>
-            <a class="nav-item nav-link" id="textarea-ekle" href="#"><i class="fab fa-tumblr-square"></i></a>
-            <a class="nav-item nav-link" href="#"><i class="fas fa-image"></i></a>
-            <a class="nav-item nav-link" href="#"><i class="fas fa-eye"></i></a>
+            <div class="nav-item nav-link" id="bg-ekle" href="#"><i class="fas fa-stroopwafel"></i></div>
+            <div class="nav-item nav-link" id="textarea-ekle" href="#"><i class="fab fa-tumblr-square"></i></div>
+            <div class="nav-item nav-link" id="croparea-ekle" href="#"><i class="fas fa-image"></i></div>
+            <div class="nav-item nav-link" id="logo-ekle" href="#"><i class="fas fa-icons"></i></div>
+            <div class="nav-item nav-link" id="canvas-ekle" href="#"><i class="fas fa-file"></i></div>
+            <div class="nav-item nav-link" id="onizleme"href="#"><i class="fas fa-eye"></i></div>
           </div>
         </div>
     </nav>
