--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="nav-item nav-link" id="logo-ekle" href="#"><i class="fas fa-icons"></i></div>
             <div class="nav-item nav-link" id="canvas-ekle" href="#"><i class="fas fa-file"></i></div>
             <div class="nav-item nav-link" id="onizleme"href="#"><i class="fas fa-eye"></i></div>
+            <div class="nav-item nav-link" id="obje-sil"href="#"><i class="fas fa-trash"></i></div>
           </div>
         </div>
     </nav>
@@ -45,6 +46,17 @@
 
     <!-- =========================================  RIGHT PANEL    =====================  -->
     <div id="right-panel">
+      <div class="card">
+        <h5 class="card-header">Özellikler</h5>
+        <div class="card-body">
+          <table class="table table-borderless properties">
+        
+          </table>
+        </div>
+      </div>
+
+
+
 
     </div>
     <!-- END-->
