--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
             <div class="nav-item nav-link"  
             data-toggle="tooltip" data-placement="top" title="Sunum Moduna Geç"
             id="sunumuBaslat"href="#"><i class="fas fa-eye"></i></div>
+            <div class="nav-item nav-link"  
+            data-toggle="tooltip" data-placement="top" title="Büyük Resmi Çiz"
+            id="renderWithBigBGImage"href="#"><i class="fas fa-expand-alt"></i></div>
+            <div class="nav-item nav-link"  
+            data-toggle="tooltip" data-placement="top" title="Büyük Resmi İndir"
+            id="downloadBigImage"href="#"><i class="fas fa-file-download"></i></div>
 
           </div>
         </div>
@@ -150,7 +156,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="btn btn-link ag-crop-resim-resimlerim"><i class="fas fa-images"></i> Resimlerim </button>
+            <button type="button" class="btn btn-link ag-crop-resim-resimlerim" style="display: none;"><i class="fas fa-caret-square-left"></i> Resimlerim </button>
             <button type="button" class="btn btn-link ag-crop-resim-yukle"><i class="fas fa-upload"></i> Yükle </button>
             <button type="button" class="btn btn-link ag-crop-resim-rotate-left crop-menu-item"><i class="fas fa-undo"></i></i></button>
             <button type="button" class="btn btn-link ag-crop-resim-rotate-right crop-menu-item"><i class="fas fa-redo"></i></button>
