Kutuya sığır çalışıyor sanırım çok satırda çalışıyor

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
         </div>
         <!-- END-->
-  </div><!-- End container -->
+    </div><!-- End container -->
 
 
 
@@ -176,9 +176,31 @@
     </div>
     <!-- END-->
 
-
+    <!-- =========================================  MODAL PROGRESS   =====================  -->
+    <div class="modal" tabindex="-1" id="modal-progress" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header" style="background-color: darkgrey;">
+            DURUM
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body"> 
+            <div style="width: 100%;text-align: center;padding: 25px;">
+                <div class="spinner-border text-muted"></div>
+                <br>
+                İşlem devam ediyor.
+            </div>
+          </div>
+          <div class="modal-footer"> 
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Kapat</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- END-->
 
     
 </body>
-
 </html>
